package Data;

public class AFileReader implements FileReader {

    public AFileReader() {

    }

    @Override
    public String saveFilaData(String path) {
        return null;
    }
}
