package Data;

import java.util.ArrayList;

public interface FileReader {

    ArrayList<String> fileData = new ArrayList<>();


    String saveFilaData(String path);



}
