package Data;

import java.util.Scanner;

public class TextUI {

    private Scanner scan = new Scanner(System.in);

    public String displayMSG(String msg){


        return msg;
    }

    public String getInput(String input){

        return input;
    }


}
