public class Login {

    private String inputUsername;
    private String inputPassword;
}
