@startuml
'https://plantuml.com/sequence-diagram
!pragma layout smetana
class Main
class Media
class Movie
class Series
interface User
class Login
class AFileReader
class Menu
class TextUI
abstract AMedia
interface FileReader
class Streaming
abstract AUser
class Admin
class NormalUser

AUser <|-- Admin
AUser <|--NormalUser
User <|-.- AUser
Media *-- AMedia
Main *-- Streaming
Streaming *-- Login
Streaming *-- Menu
Streaming *-- Media
Streaming *-- UserCreater


AMedia <|-- Movie
AMedia <|-- Series


Streaming *-- TextUI
Streaming *-- FileReader
FileReader <|-.- AFileReader
Main : + static void main(string [] args)

class Streaming {
- Menu menu
-Media media
-Login login
-User user


}




Login : -String inputUsername
Login : -String inputPassword

FileReader : ArrayList<String> ReadFileData(String path)
FileReader : String saveFileData(String path)



User : + void setUserName()
User : + void setPassword()

User : + String getUsername(String username)
User : + String getPassword(String password)

User : //Tjek om input er lovligt(rigtig brug af tegn)

UserCreater *-- User
class UserCreater{
+createUser()
}

Streaming *-- FileIO
class FileIO{
+saveUserData()
}



Menu : +void displayUserOptions()


Menu : +void displayMyList()

Menu : +void displayWatchLater()
Menu : +void displaySeries()
Menu : +void displayMovies()
Menu : +void displayByGenre()
Menu : +displayAdminOptions()

TextUI : -Scanner scan
TextUI : + displayMsg()
TextUI : +getInput(String msg)

Media : +String createMedia()
Media : +void displayallMoviesAndSeries()
Media : +void displayaOptions()


AMedia : -String genre
AMedia : -double rating
AMedia : -int year
AMedia : -String Name

Movie : +String getMovie(String movie)

AMedia : +String getGenre(String genre)
AMedia : +double getRating(double rating)
AMedia : +int getYear(int year)


Series : -String season



Series : +void getSeries()
Series : +String getSeason(String season)


abstract AUser{
-String username
-String password
-boolean Admin

+ void setUserName()
+ void setPassword()
+ String getUsername(String username)
+ String getPassword(String password)

+void removeMoviesFromList()
+void removeSeriesFromList()
 +void chooseMovie()
 +void chooseSeries()


}

Admin *-- AdminHandler
class AdminHandler{

+createMedia()
+removeMedia()


}







@enduml